--- a/app/views/appointments/show.html.erb
+++ b/app/views/appointments/show.html.erb
@@ -1,3 +1,5 @@
-<h1>Appointments#show</h1>
+
 <h1> <%=@appointment.doctor.name%></h1>
-<h2> <%=@appointment.patient.name%> should arrive at <%=@appointment.date %> for his appointment</h2> 
+<h2> <%=@appointment.patient.name%> should arrive at <%=@appointment.date %> for his appointment</h2>
+<h1><%= link_to "<button>edit this appointment</button>".html_safe, edit_appointment_path(@appointment)%></h1>
+<h1><%= link_to "Back to appointments".html_safe, appointments_path%></h1>
